syntax = "proto3";

option csharp_namespace = "SampleApp.Grpc.Proto";

import "enums.proto";
import "google/protobuf/empty.proto";

service TodoService {
  rpc Page(ServiceRequestPage) returns (ServiceResponsePageTodoItems);
  rpc Get (ServiceRequestId) returns (ServiceResponseTodoItem);
  rpc Save (ServiceRequestTodoItem) returns (ServiceResponseTodoItem);
  rpc Delete (ServiceRequestId) returns (google.protobuf.Empty);
}

message TodoItemDto {
	NullableString id = 1;
	string name = 2;
	TodoItemStatus status = 3;
	NullableString securedeterministic = 4;
	NullableString securerandom = 5;
}

message ServiceRequestId {
	string id = 1;
}

message ServiceRequestTodoItem {
	TodoItemDto data = 1;
}

message ServiceRequestEmpty {}

message ServiceRequestPage {
	int32 pagesize = 1;
	int32 pageindex = 2;
}

message ServiceResponseTodoItem {
	ResponseCode responseCode = 1;
	string message = 2;
	TodoItemDto data = 3;
	repeated ResponseError errors = 4;
}

message ServiceResponsePageTodoItems {
	ResponseCode responseCode = 1;
	string message = 2;
	PagedResponseTodo data = 3;
	repeated ResponseError errors = 4;
}

message PagedResponseTodo{
	int32 pagesize = 1;
	int32 pageindex = 2;
	int32 total = 3;
	repeated TodoItemDto data = 4;
}

message ResponseError {
	string message = 1;
	string type = 2;
	string stacktrace = 3;
}

message NullableString {
  oneof kind {
    bool isnull = 1; // set this to "true" when null
    string data = 2;
  }
}